[package]
name = "cckv"
version = "0.1.0"
authors = ["yixin <ranyixin@xiaoduotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "0.5.5"
tokio = "0.3.5"
tokio-executor = "0.1.10"
byteorder = "1.4.2"
futures-preview = "0.2.2"